# elder-mind-harness

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-DOCS  NOTICE  README.md  SECURITY.md  START-HERE.md  THREAT_MODEL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  policy_rule_request.md
.github/workflows/: ci.yml  uat.yml
adapters/: README.md
adapters/claude-code/: settings.snippet.json
adapters/kiro/agents/: eldermind.json
adapters/opencode/: eldermind.js
docs/: ARCHITECTURE.md  BRAND.md  CONCEPT.md  COUNCIL.md  DESIGN-REVIEW.md  IDE-SUPPORT.md  LICENSING.md  STANDARDS-MAP.md  TESTING.md
eldermind/: __init__.py  audit.py  blocklist.json  cli.py  config.py  council.py  decide.py  detectors.py  gate.py  harness.py  install.py  pinning.py  policy.py  policy.yaml  risk_engine.py  server.py  supplychain.py
skills/eldermind-init/: SKILL.md
tests/: test_decide.py  test_docs.py  test_harness.py  test_hooks.py  test_install.py  test_journeys.py  test_known_bypasses.py  test_server.py
tools/: build_demo.py  build_pdfs.py  build_social_card.py
