[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eldermind"
version = "0.1.0"
description = "Elder Mind — a local-first agentic governance harness for coding agents (pre-tool gate, supply-chain checks, threat detectors, BYO-LLM council). OWASP-Agentic-aware, NIST-AI-RMF-aligned."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cyber Elders Pty Ltd" }]
keywords = ["agentic", "governance", "harness", "owasp", "nist", "mcp", "supply-chain", "claude-code", "opencode", "kiro", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8.0"]
pdf = ["reportlab>=4"]   # branded PDF generator (tools/build_pdfs.py)
demo = ["pillow>=10"]    # terminal-demo GIF generator (tools/build_demo.py)

[project.scripts]
eldermind = "eldermind.cli:main"

[project.urls]
Homepage = "https://github.com/CyberElders/elder-mind-harness"
Source = "https://github.com/CyberElders/elder-mind-harness"

[tool.hatch.build.targets.wheel]
packages = ["eldermind"]
artifacts = ["eldermind/policy.yaml", "eldermind/blocklist.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
